# plant_hydraulics

./: .gitignore  0_leaf_fluxes.html  0_leaf_stomatal_optimization.html  0_soil_params.html  1_leaf_stomatal_medlyn.html  2_leaf_stomatal_profit_max.html  README.md  index.html  leaf_boundary_layer.html  leaf_ci_optimization.html  leaf_params.html  leaf_phosynthesis.html  leaf_stomatal_efficiency.html  leaf_temperature.html  leaf_water_potential.html  parameter_classes.html  pixi.toml  pyproject.toml  root_params.html  run_sureau.html  search.json  sitemap.xml  soil_resistance.html  sureau_climate.html  sureau_object_initialization.html  sureau_plant_hydraulics.html  sureau_soil_hydraulics.html  sureau_soil_params.html  sureau_solver.html  sureau_vegetation_params.html  sureau_vegetation_processes.html  tutorial_1_basic_run.html  tutorial_2_gs_models.html  tutorial_3_profit_max_validation.html  tutorial_4_diurnal_sureau.html  utils.html
_docs/: 0_leaf_fluxes.html  0_leaf_stomatal_optimization.html  0_soil_params.html  1_leaf_stomatal_medlyn.html  1_sureau_soil_params.html  2_leaf_stomatal_profit_max.html  index.html  leaf_boundary_layer.html  leaf_ci_optimization.html  leaf_params.html  leaf_phosynthesis.html  leaf_stomatal_efficiency.html  leaf_temperature.html  leaf_water_potential.html  parameter_classes.html  robots.txt  root_params.html  run_sureau.html  search.json  sitemap.xml  soil_resistance.html  sureau_climate.html  sureau_object_initialization.html  sureau_plant_hydraulics.html  sureau_soil_hydraulics.html  sureau_solver.html  sureau_vegetation_params.html  (+5 more)
(+189 files in other folders)
