[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "plant_hydraulics"
dynamic = ["version"]
description = "Python code for plant hydraulics models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "ecamo19", email = "erickcamo19@gmail.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ['numpy', 'matplotlib', 'itables', 'pandas']

[project.urls]
Repository = "https://github.com/ecamo19/plant_hydraulics"
Documentation = "https://ecamo19.github.io/plant_hydraulics/"

[project.entry-points.nbdev]
plant_hydraulics = "plant_hydraulics._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "plant_hydraulics.__version__"}

[tool.setuptools.packages.find]
include = ["plant_hydraulics"]

[tool.nbdev]

[tool.setuptools.package-data]
"bonan_hydraulics" = ["data/*"]